--- a/views/single.twig
+++ b/views/single.twig
@@ -2,8 +2,9 @@
 
 {% block content %}
 	<div class="content-wrapper">
+
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<img src="{{ post.thumbnail.src|resize(1200, 300) }}">
+			<img src="{{ post.thumbnail.src|letterbox(300, 300) }}">
 			<section class="article-content">
 				<h1 class="article-h1">{{ post.title }}</h1>
 				<a href="{{ post.link }}">{{ _e('edit') }}</a>
