--- a/views/tease-post.twig
+++ b/views/tease-post.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
 	<h2 class="h2"><a href="{{post.link}}">{{ post.title }}</a></h2>
-		<p>{{ post.excerpt({ words:5, read_more: "Keep reading" }) }}</p>
-		{% if post.thumbnail.src %}
-			<img src="{{ post.thumbnail.src }}" />
+	<p>{{ post.excerpt({ words:20, read_more: "Read more..." }) }}</p>
+	{% if post.thumbnail.src %}
+		<img src="{{ post.thumbnail.src | letterbox(300, 300) }}" />
 		{% endif %}
 {% endblock %}
