--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -5,6 +5,7 @@
 <head>
     <meta charset="{{ site.charset }}" />
     <meta name="description" content="{{ site.description }}">
+    <link rel="stylesheet" href="{{ site.theme.link }}/static/pico.lime.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="{{ site.theme.link }}/style.css" type="text/css" media="screen" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
