--- a/views/index.twig
+++ b/views/index.twig
@@ -1,9 +1,13 @@
 {% extends "base.twig" %}
 
 {% block content %}
+  <div class="row">
 	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+    <div class="col-md-6">
+		  {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+    </div>
 	{% endfor %}
+  </div class="row">
 
 	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
