--- a/views/index.twig
+++ b/views/index.twig
@@ -1,27 +1,29 @@
 {% extends "base.twig" %}
 
-{% block header %}
-  <div class="index-hero" style="background-image:url(/wp-content/uploads/2023/11/cropped-IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled-1.jpg);">
-	  <div class="wrapper">
-		  <h1 class="hdr-logo" role="banner">
-			  <a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-		  </h1>
-		  <nav id="nav-main" class="nav-main" role="navigation">
-			  {% include "menu.twig" with {'items': menu.get_items} %}
-		  </nav><!-- #nav -->
-	  </div>
+{% block header_extra %}
+  <!-- <div id="index-hero" style="background-image:url(/wp-content/uploads/2023/11/cropped-IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled-1.jpg);"> -->
+
+  <div>
+   <h1 class="hdr-logo" role="banner">
+		 <a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
+	 </h1>
+   <h2>Tekevän ihmisen olohuone - Makers living room</h2>
+   <button>VR Tour</button>
+   <button>Vierailijan info</button>
+   <button>Visitor info</button>
   </div>
+
 {% endblock %}
 
 {% block content %}
-
-  <div class="row">
-	{% for post in posts %}
-    <div class="col-md-6">
-		  {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-    </div>
-	{% endfor %}
-  </div class="row">
-
+  <div class="">
+    <div class="row container">
+	    {% for post in posts %}
+        <div class="col-md-6">
+		      {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+        </div>
+	    {% endfor %}
+    </div class="row">
 	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+  </div>
 {% endblock %}
