--- a/views/index.twig
+++ b/views/index.twig
@@ -1,16 +1,21 @@
 {% extends "base.twig" %}
 
 {% block header_extra %}
-  <!-- <div id="index-hero" style="background-image:url(/wp-content/uploads/2023/11/cropped-IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled-1.jpg);"> -->
 
-  <div>
-   <h1 class="hdr-logo" role="banner">
-		 <a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-	 </h1>
-   <h2>Tekevän ihmisen olohuone - Makers living room</h2>
-   <button>VR Tour</button>
-   <button>Vierailijan info</button>
-   <button>Visitor info</button>
+  <div class="row" style="min-height: 80vh; padding-top:20em;">
+
+    <div class="col-md-6">
+      <div style="background: rgba(0, 0, 0, 0.2);">
+        <h1 class="hdr-logo" role="banner">
+		    {{site.name}}
+	    </h1>
+      <h2>Tekevän ihmisen olohuone - Makers living room</h2>
+      <button class="contrast">VR Tour</button>
+      <button>Vierailijan info</button>
+      <button>Visitor info</button>
+      </div>
+    </div>
+
   </div>
 
 {% endblock %}
