--- a/views/menu.twig
+++ b/views/menu.twig
@@ -1,6 +1,9 @@
+
 {% if menu %}
-	<ul>
-	{% for item in items %}
+
+	<ul style="background: rgba(0, 0, 0, 0.2);">
+
+	  {% for item in items %}
 		<li class="{{ item.classes | join(' ') }}">
 			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
 			{% include "menu.twig" with {'items': item.children} %}
