--- a/views/index.twig
+++ b/views/index.twig
@@ -38,13 +38,36 @@
       </div>
 
       <div class="row">
-        <h1>Mikä Hacklab?</h1>
+        <h2>Mikä Hacklab?</h1>
         <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
       </div>
 
     </div>
 
     <div class="container">
+      <h2>Labin välineistöä</h2>
+      <div class="row">
+        <div class="col-md-3">
+          <h3>Tekniset työt</h3>
+          <p>Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
+        </div>
+        <div class="col-md-3">
+          <h3>Puitteet rentoon ajanviettoon</h3>
+          <p>Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
+        </div>
+        <div class="col-md-3">
+          <h3>Virtuaalitodellisuus</h3>
+          <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
+        </div>
+        <div class="col-md-3">
+          <h3>Radioamatööritoiminta</h3>
+          <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <h2>Viimeisimmät artikkelit blogissa</h2>
       <div class="row">
 	      {% for post in posts %}
           <div class="col-md-6">
