Correct hero image, stretch and center better

--- a/views/base.twig
+++ b/views/base.twig
@@ -13,7 +13,7 @@
 
 	<header class="container-fluid">
 
-		<div style="max-width:2100px; background-image:url(/wp-content/uploads/2023/11/cropped-IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled-1.jpg);">
+		<div style="background-image:url(/wp-content/uploads/2023/11/IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled.jpg); background-position: top center; background-size: cover; max-width: 2100px; margin: auto auto;">
 
       <div class="container">
         {% block nav_before %}{% endblock %}
