--- a/views/index.twig
+++ b/views/index.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block nav_after %}
-  <div class="row" style="min-height: 80vh; padding-top:20em;">
+  <div class="row" style="min-height: 50em; padding-top:34em;">
 
     <div class="col-md-6">
       <div style="background: rgba(0, 0, 0, 0.2);">
