Single container around content block

--- a/views/index.twig
+++ b/views/index.twig
@@ -25,9 +25,10 @@
   </div>
 {% endblock %}
 
+
 {% block content %}
 
-  <div class="container">
+  <div class="">
     <div class="row">
       <div class="col-md-4">
         <h3>Yhteisölliset työtilat</h3>
@@ -44,12 +45,12 @@
 
       <div class="row">
         <h2>Mikä Hacklab?</h1>
-        <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
+          <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
       </div>
 
     </div>
 
-    <div class="container">
+    <div class="">
       <h2>Labin välineistöä</h2>
       <div class="row">
         <div class="col-md-3">
@@ -71,7 +72,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="">
       <h2>Viimeisimmät artikkelit blogissa</h2>
       <div class="row">
 	      {% for post in posts %}
@@ -84,7 +85,7 @@
       <button>Selaa lisää</button>
     </div>
 
-    <div class="container">
+    <div class="">
       <div class="row">
         <div class="col-md-6">
           <h2>Tiedotteet</h2>
