--- a/views/base.twig
+++ b/views/base.twig
@@ -37,8 +37,10 @@
 	<section id="content" role="main">
 		{% if title %}<h1>{{title}}</h1>{% endif %}
 
-    {% block content %}
-		{% endblock %}
+    <div class="container">
+      {% block content %}
+		  {% endblock %}
+    </div>
 
 		{% if sidebar %}
 			<aside class="layout-sidebar">
