--- a/views/footer.twig
+++ b/views/footer.twig
@@ -4,7 +4,7 @@
   <footer id="footer">
     <div class="container" style="background-color: rgba(0, 0, 0, 0.5);">
 
-      <div class="row" style="padding-top: 8em">
+      <div class="row" style="padding-top: 8em; color: white;">
         <div class="col-md-6">
           <h3>Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/">Telegram/Matrix kanavallemme</a>.</h3>
         </div>
@@ -25,7 +25,7 @@
           <p>Emännäntie 10 O (alakerta)</p>
           <p><a href="/kerhotila/">Avaa saapumisohje</a></p>
         </div>
-        <div class="col-md-3">P. 0931576906</div>
+        <div class="col-md-3"><p>P. 0931576906</p></div>
         <div class="col-md-3">
           <h4>Sponsorit</h4>
           <a href="https://jyy.fi/" target="_blank">
