--- a/views/base.twig
+++ b/views/base.twig
@@ -11,18 +11,18 @@
 	{{ function('wp_body_open') }}
 	<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 
-	<header class="container-fluid">
+	<header style="padding-block: 0;">
 
-		<div style="background-image:url(/wp-content/uploads/2023/11/IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled.jpg); background-position: top center; background-size: cover; max-width: 2250px; margin: auto auto;">
+		<div style="background-image:url(/wp-content/uploads/2023/11/IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled.jpg); background-position: top center; background-size: cover; max-width: 2250px; margin: auto auto;"
+      class="container-fluid">
 
       <div class="container">
         {% block nav_before %}{% endblock %}
 
-
 				<nav id="nav-main" class="nav-main" role="navigation">
           <a href="{{ site.link }}" title="Home">
             <img src="/wp-content/uploads/2023/11/cropped-logo-smooth-simplified.png"
-              alt="Hacklab Jyväskylä logo" style="width:80px;" />
+              alt="Hacklab Jyväskylä logo" style="width: 80px;" />
           </a>
 					{% include "menu.twig" with {'items': menu.get_items} %}
 				</nav>
