--- a/views/menu.twig
+++ b/views/menu.twig
@@ -5,7 +5,7 @@
 
 	  {% for item in items %}
 		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
+			<a target="{{ item.target }}" href="{{ item.link }}" style="color: white;">{{ item.title }}</a>
 			{% include "menu.twig" with {'items': item.children} %}
 		</li>
 	{% endfor %}
