--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]><html class="no-js no-svg ie lt-ie9 lt-ie8 lt-ie7" {{ site.language_attributes }}> <![endif]-->
 <!--[if IE 9]><html class="no-js no-svg ie ie9 lt-ie9 lt-ie8" {{ site.language_attributes }}> <![endif]-->
 <!--[if gt IE 9]><!--><html class="no-js no-svg" {{ site.language_attributes }}> <!--<![endif]-->
-<head>
+  <head>
     <meta charset="{{ site.charset }}" />
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ site.theme.link }}/static/pico.lime.css" type="text/css" media="screen" />
@@ -15,3 +15,7 @@
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     {{function('wp_head')}}
+
+    {% block head %}
+	  {% endblock %}
+	</head>
