--- a/views/base.twig
+++ b/views/base.twig
@@ -2,9 +2,13 @@
 
 <body class="{{body_class}}" data-template="base.twig">
 	{{ function('wp_body_open') }}
+
+  <!-- NOTE Skip to content does not link properly to index hero controls -->
 	<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 
-	<header style="padding-block: 0;">
+	<header style="padding-block: 0;"> <!-- CSS override picocss top padding -->
+
+    <!-- Navbar background / index hero background image -->
 		<div style="background-image:url(/wp-content/uploads/2023/11/IMG_20231111_184014_00_030_2023-11-16_18-56-16_screenshot_grade_100-scaled.jpg);
       background-position: top center; background-size: cover; max-width: 2250px; margin: auto auto;">
 
@@ -33,14 +37,18 @@
 		  {% endblock %}
     </div>
 
+    <!-- TODO sidebar layout not tested -->
 		{% if sidebar %}
 			<aside class="layout-sidebar">
 				{{sidebar}}
 			</aside>
 		{% endif %}
+
 	</main>
 
   <footer>
+
+    <!-- Footer background image -->
     <div style="background-image:url(/wp-content/uploads/2019/07/Screenshot_20190705_184206.png);
       background-position: center center; background-size: 100%; min-height: 800px;">
 
