--- a/views/index.twig
+++ b/views/index.twig
@@ -1,13 +1,13 @@
 {% extends "base.twig" %}
 
-{% block nav_before %}
+{% block nav_before %} <!-- Index page "status bar" -->
   <div id="statusbar" class="row" style="padding-top: 1em; padding-bottom: 1em; color: white;">
     <div class="col-md-6"><a style="color: lightgray">Emännäntie 10 O, Jyväskylä</a></div>
     <div class="col-md-6"><a style="color: lightgray">Kävijäseuranta</a>: Hacklab on nyt täysi</div>
   </div>
 {% endblock %}
 
-{% block nav_after %}
+{% block nav_after %} <!-- Index page hero content -->
   <div class="row" style="min-height: 50em; padding-top:33em;">
 
     <div class="col-md-6">
@@ -28,80 +28,101 @@
 
 {% block content %}
 
-  <div class="">
-    <div class="row">
-      <div class="col-md-4">
+  <div class="row">
+    <h2>Mikä Hacklab?</h2>
+    <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <article>
         <h3>Yhteisölliset työtilat</h3>
         <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
-      </div>
-      <div class="col-md-4">
-        <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
-        <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</h3><p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
-      </div>
-      <div class="col-md-4">
-        <h3>Osa Suomen Hacklabien verkostoa</h3>
-        <p>Suomessa on Hacklabeja jo 15 kaupungissa – <a href="hacklab.fi">katso lisää</a>.</p>
-      </div>
-
-      <div class="row">
-        <h2>Mikä Hacklab?</h1>
-          <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
-      </div>
-
+        <footer>
+          <div role="group"><button href="">Liity jäseneksi</button></div>
+        </footer>
+      </article>
     </div>
+    <div class="col-md-4">
+      <article>
+        <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
+        <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
+        <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
+      </article>
+    </div>
+    <div class="col-md-4">
+      <article>
+        <h3>Osa Suomen Hacklabien verkostoa</h3>
+        <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
+        <footer>
+          <div role="group">
+            <button href="hacklab.fi">Katso lisää</button>
+          </div>
+        </footer>
+      </article>
+    </div>
+  </div>
 
-    <div class="">
-      <h2>Labin välineistöä</h2>
-      <div class="row">
-        <div class="col-md-3">
+  <div class="">
+    <h2>Labin välineistöä</h2>
+    <div class="row">
+      <div class="col-md-6 col-lg-3">
+        <article>
           <h3>Tekniset työt</h3>
           <p>Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
-        </div>
-        <div class="col-md-3">
+        </article>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <article>
           <h3>Puitteet rentoon ajanviettoon</h3>
           <p>Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
-        </div>
-        <div class="col-md-3">
-          <h3>Virtuaalitodellisuus</h3>
-          <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
-        </div>
-        <div class="col-md-3">
-          <h3>Radioamatööritoiminta</h3>
-          <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
-        </div>
       </div>
+        </article>
+        <div class="col-md-6 col-lg-3">
+          <article>
+            <h3>Virtuaalitodellisuus</h3>
+            <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
+          </article>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <article>
+            <h3>Radioamatööritoiminta</h3>
+            <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
+        </div>
+          </article>
     </div>
+  </div>
 
-    <div class="">
-      <h2>Viimeisimmät artikkelit blogissa</h2>
-      <div class="row">
-	      {% for post in posts %}
-          <div class="col-md-6">
-		        {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-          </div>
-	      {% endfor %}
-      </div class="row">
-	    {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
-      <button>Selaa lisää</button>
-    </div>
-
-    <div class="">
-      <div class="row">
+  <div class="">
+    <h2>Viimeisimmät artikkelit blogissa</h2>
+    <div class="row">
+	    {% for post in posts %}
         <div class="col-md-6">
-          <h2>Tiedotteet</h2>
-          <ul>
-            <li>Tiedote 1</li>
-            <li>Tiedote 2</li>
-            <li>Tiedote 3</li>
-            <li>Tiedote 4</li>
-            <li>Tiedote 5</li>
-          </ul>
+		      {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
         </div>
-        <div class="col-md-u">
-          <h2>Tapahtumat</h2>
-          <article>TODO Tapahtumalistaus</article>
-        </div>
+	    {% endfor %}
+    </div class="row">
+	  {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+    <button>Selaa lisää</button>
+  </div>
+
+  <div class="">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Tiedotteet</h2>
+        <ul>
+          <li>Tiedote 1</li>
+          <li>Tiedote 2</li>
+          <li>Tiedote 3</li>
+          <li>Tiedote 4</li>
+          <li>Tiedote 5</li>
+        </ul>
+      </div>
+      <div class="col-md-u">
+        <h2>Tapahtumat</h2>
+        <article>TODO Tapahtumalistaus</article>
       </div>
     </div>
+  </div>
 
 {% endblock %}
