--- a/views/index.twig
+++ b/views/index.twig
@@ -28,13 +28,14 @@
 
 {% block content %}
 
+  <section>
   <div class="row">
     <h2>Mikä Hacklab?</h2>
     <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
   </div>
 
-  <div class="row">
-    <div class="col-md-4">
+  <div class="row middle-md">
+    <div class="col-md-4 ">
       <article>
         <h3>Yhteisölliset työtilat</h3>
         <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
@@ -62,10 +63,12 @@
       </article>
     </div>
   </div>
+  </section>
+
 
   <section>
     <h2>Labin välineistöä</h2>
-    <div class="row">
+    <div class="row middle-md">
       <div class="col-md-6 col-lg-3">
         <article>
           <h3>Tekniset työt</h3>
