--- a/views/index.twig
+++ b/views/index.twig
@@ -2,8 +2,8 @@
 
 {% block nav_before %} <!-- Index page "status bar" -->
   <div id="statusbar" class="row" style="padding-top: 1em; padding-bottom: 1em; color: white;">
-    <div class="col-md-6"><a style="color: lightgray">Emännäntie 10 O, Jyväskylä</a></div>
-    <div class="col-md-6"><a style="color: lightgray">Kävijäseuranta</a>: Hacklab on nyt täysi</div>
+    <div class="col-md"><a style="color: lightgray">Emännäntie 10 O, Jyväskylä</a></div>
+    <div class="col-md"><a style="color: lightgray">Kävijäseuranta</a>: Hacklab on nyt täysi</div>
   </div>
 {% endblock %}
 
@@ -35,7 +35,7 @@
   </div>
 
   <div class="row middle-md">
-    <div class="col-md-4 ">
+    <div class="col-md">
       <article>
         <h3>Yhteisölliset työtilat</h3>
         <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
@@ -44,14 +44,14 @@
         </footer>
       </article>
     </div>
-    <div class="col-md-4">
+    <div class="col-md">
       <article>
         <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
         <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
         <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
       </article>
     </div>
-    <div class="col-md-4">
+    <div class="col-md">
       <article>
         <h3>Osa Suomen Hacklabien verkostoa</h3>
         <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
@@ -75,19 +75,19 @@
           <p>Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
         </article>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 col-lg">
         <article>
           <h3>Puitteet rentoon ajanviettoon</h3>
           <p>Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
         </article>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 col-lg">
         <article>
           <h3>Virtuaalitodellisuus</h3>
           <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
         </article>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 col-lg">
         <article>
           <h3>Radioamatööritoiminta</h3>
           <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
@@ -112,7 +112,7 @@
   <section>
     <h2>Tiedotteet ja tapahtumakalenteri</h2>
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg">
         <ul>
           <li>Tiedote 1</li>
           <li>Tiedote 2</li>
@@ -121,7 +121,7 @@
           <li>Tiedote 5</li>
         </ul>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg">
         <article>
           {% apply shortcodes %} [calendar id="283"] {% endapply %}
         </article>
