Centering on mobile (xs)

--- a/views/index.twig
+++ b/views/index.twig
@@ -29,46 +29,45 @@
 {% block content %}
 
   <section>
-  <div class="row">
-    <h2>Mikä Hacklab?</h2>
-    <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
-  </div>
+    <div class="row">
+      <h2>Mikä Hacklab?</h2>
+      <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
+    </div>
 
-  <div class="row middle-md">
-    <div class="col-md">
-      <article>
-        <h3>Yhteisölliset työtilat</h3>
-        <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
-        <footer>
-          <div role="group"><button href="">Liity jäseneksi</button></div>
-        </footer>
-      </article>
+    <div class="row middle-md center-xs">
+      <div class="col-md">
+        <article>
+          <h3>Yhteisölliset työtilat</h3>
+          <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
+          <footer>
+            <div role="group"><button href="">Liity jäseneksi</button></div>
+          </footer>
+        </article>
+      </div>
+      <div class="col-md">
+        <article>
+          <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
+          <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
+          <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
+        </article>
+      </div>
+      <div class="col-md">
+        <article>
+          <h3>Osa Suomen Hacklabien verkostoa</h3>
+          <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
+          <footer>
+            <div role="group">
+              <button href="hacklab.fi">Katso lisää</button>
+            </div>
+          </footer>
+        </article>
+      </div>
     </div>
-    <div class="col-md">
-      <article>
-        <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
-        <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
-        <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
-      </article>
-    </div>
-    <div class="col-md">
-      <article>
-        <h3>Osa Suomen Hacklabien verkostoa</h3>
-        <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
-        <footer>
-          <div role="group">
-            <button href="hacklab.fi">Katso lisää</button>
-          </div>
-        </footer>
-      </article>
-    </div>
-  </div>
   </section>
-
 
   <section>
     <h2>Labin välineistöä</h2>
-    <div class="row middle-md">
+    <div class="row middle-md center-xs">
       <div class="col-md-6 col-lg-3">
         <article>
           <h3>Tekniset työt</h3>
