--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: rgba(0, 0, 0, 0.5);">
+<div class="container" style="background-color: rgba(0, 0, 0, 0.5); padding: 2em;">
 
   <div class="row" style="padding-top: 8em; color: white;">
     <div class="col-md-6">
