Footer mobile responsivity

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,34 +1,40 @@
 <div class="container" style="background-color: rgba(0, 0, 0, 0.5); padding: 2em;">
 
-  <div class="row" style="padding-top: 8em; color: white;">
+  <div class="row middle-md around-md center-xs" style="padding-top: 6em; color: white;">
     <div class="col-md-6">
       <h3>Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/">Telegram/Matrix kanavallemme</a>.</h3>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <button>Tutustu toimintaan</button>
     </div>
   </div>
 
-  <div class="row" style="margin-top: 8em">
-    <div class="col-md-3">
+  <div class="row center-md middle-lg between-lg center-xs middle-xs" style="margin-top: 4em">
+    <div class="col-lg-3 col-xs-6">
       <a href="{{ site.link }}" title="Home">
         <img src="/wp-content/uploads/2023/11/cropped-logo-smooth-simplified.png"
-          alt="Hacklab Jyväskylä logo" style="width:200px;" />
+          alt="Hacklab Jyväskylä logo" style="width:150px;" />
       </a>
     </div>
-    <div class="col-md-3">
-      <p>Hacklab Jyväskylä ry</p>
+    <div class="col-lg-3 col-xs-6">
       <p>Emännäntie 10 O (alakerta)</p>
+      <p>P. 0931576906</p>
       <p><a href="/kerhotila/">Avaa saapumisohje</a></p>
     </div>
-    <div class="col-md-3"><p>P. 0931576906</p></div>
-    <div class="col-md-3">
+    <div class="col-lg-3 col-xs-6">
       <h4>Sponsorit</h4>
       <a href="https://jyy.fi/" target="_blank">
         <img src="/wp-content/uploads/2017/09/jyylogo-w-150x150.png" alt="Jyväskylän yliopiston ylioppilaskunnan logo"></a>
     </div>
   </div>
 
-  <p>Copyright {{"now"|date('Y')}}</p>
+  <div class="row center-xs" style="margin-top:2em">
+    <div class="col-xs-6">
+      <p>Copyright {{"now"|date('Y')}}</p>
+      <p>Hacklab Jyväskylä ry</p>
+    </div>
+
+  </div>
+
   {{ function('wp_footer') }}
 </div>
