--- a/views/index.twig
+++ b/views/index.twig
@@ -109,7 +109,7 @@
 		      <h2 class="h2"><a href="{{post.link}}">{{ post.title }}</a></h2>
 	        <!-- <p>{{ post.excerpt({ words:20, read_more: "Read more..." }) }}</p> -->
 	        {% if post.thumbnail.src %}
-		        <img src="{{ post.thumbnail.src | letterbox(300, 300) }}" />
+		        <img src="{{ post.thumbnail.src('large') }}" style="width:300px; height:200px; object-fit:cover;" />
 	        {% endif %}
         </div>
 	    {% endfor %}
