--- a/views/index.twig
+++ b/views/index.twig
@@ -103,13 +103,14 @@
 
   <section>
     <h2>Viimeisimmät artikkelit blogissa</h2>
+      <article>
     <div class="row">
 	    {% for post in posts %}
         <div class="col-md-3 col-xs-6">
 		      <h2 class="h2"><a href="{{post.link}}">{{ post.title }}</a></h2>
 	        <!-- <p>{{ post.excerpt({ words:20, read_more: "Read more..." }) }}</p> -->
 	        {% if post.thumbnail.src %}
-		        <img src="{{ post.thumbnail.src('large') }}" style="width:300px; height:200px; object-fit:cover;" />
+		        <a href="{{post.link}}"><img src="{{ post.thumbnail.src('large') }}" style="width:300px; height:200px; object-fit:cover;" /></a>
 	        {% endif %}
         </div>
 	    {% endfor %}
@@ -119,10 +120,11 @@
         <button style="margin-top:1em;"><a href="/blogi">Selaa lisää</a></button>
       </div>
     </div>
+      </article>
   </section>
 
   <section>
-    <h2>Tiedotteet ja tapahtumakalenteri</h2>
+    <h2>Tiedotteet</h2>
     <div class="row">
       <div class="col-lg">
         <ul>
