Show submenu dropdown

--- a/views/menu.twig
+++ b/views/menu.twig
@@ -1,13 +1,41 @@
-
+<!-- NOTE
+     - PicoCSS does not support hover dropdowns used in previous theme
+       (https://github.com/picocss/pico/issues/358)
+     - Supports only 2 levels, add more only if absolutely necessary -->
 {% if menu %}
 
 	<ul style="background: rgba(0, 0, 0, 0.2);">
 
 	  {% for item in items %}
-		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}" style="color: white;">{{ item.title }}</a>
-			{% include "menu.twig" with {'items': item.children} %}
-		</li>
-	{% endfor %}
+
+      {% if item.children %}  <!-- Menu with dropdown -->
+
+        <li class="{{ item.classes | join(' ') }}">
+			    <a target="{{ item.target }}" href="{{ item.link }}" style="color: white;">{{ item.title }}</a>
+		    </li>
+
+        <details class="dropdown">
+          <summary></summary>
+          <ul dir="rtl">
+            {% for child in item.children %}
+		          <li class="{{ item.classes | join(' ') }}">
+			          <a target="{{ child.target }}" href="{{ child.link }}" style="color: white;">{{ child.title }}</a>
+		          </li>
+	          {% endfor %}
+          </ul>
+        </details>
+
+      {% else %}
+
+        <li class="{{ item.classes | join(' ') }}">
+			    <a target="{{ item.target }}" href="{{ item.link }}" style="color: white;">{{ item.title }}</a>
+		    </li>
+
+      {% endif %}
+
+	  {% endfor %}
 	</ul>
+
+{% else %}
+  <p>Error in menu.twig: Can't load menu here because one is not set.</p>
 {% endif %}
