--- a/views/index.twig
+++ b/views/index.twig
@@ -117,7 +117,7 @@
     </div class="row">
     <div class="row center-xs">
       <div class="col-xs-6">
-        <button style="margin-top:1em;"><a href="/blogi">Selaa lisää</a></button>
+        <button href="/blogi" style="margin-top:1em;">Selaa lisää</button>
       </div>
     </div>
       </article>
