Add Bootstrap 5.3 in place of PicoCss and Flexboxgrid
Some features were not implemented so try switch before doing CSS manually

--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -5,8 +5,11 @@
   <head>
     <meta charset="{{ site.charset }}" />
     <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="{{ site.theme.link }}/static/pico.lime.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{{ site.theme.link }}/static/flexboxgrid.min.css" type="text/css" media="screen" />
+    <!-- <link rel="stylesheet" href="{{ site.theme.link }}/static/pico.lime.css" type="text/css" media="screen" />
+         <link rel="stylesheet" href="{{ site.theme.link }}/static/flexboxgrid.min.css" type="text/css" media="screen" /> -->
+    <link href="{{ site.theme.link }}/static/bootstrap.css" rel="stylesheet">
+    <script src="{{ site.theme.link }}/static/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
+
     <link rel="stylesheet" href="{{ site.theme.link }}/style.css" type="text/css" media="screen" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
